--- a/frontend/src/pages/signup/Signup.css
+++ b/frontend/src/pages/signup/Signup.css
@@ -2,5 +2,8 @@
   padding-left: 20%;
   padding-right: 20%;
   padding-top: 5%;
-  border-bottom-right-radius: 10%;
+}
+
+.customBorder {
+  border-radius: 10%;
 }
