others ui touch-ups

--- a/frontend/src/pages/home/components/Categories.css
+++ b/frontend/src/pages/home/components/Categories.css
@@ -24,3 +24,12 @@ ion-modal#example-modal ion-icon {
 ion-modal#example-modal .wrapper {
   margin-bottom: 10px;
 }
+
+.pad {
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+.customBorder {
+  border-radius: 10%;
+}
